[package]
name = "lc-data-extractor"
version = "0.2.6"
edition = "2021"

[dependencies]
serde = "1.0.130"
serde_json = "1.0.59"
attohttpc = "0.18.0"
native-tls = "0.2.8"
base64 = "0.13.0"
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["tlhelp32", "handleapi", "memoryapi", "errhandlingapi"] }
ntapi = { version = "0.3.6", features = ["user"] }
